<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="frameTwoVM" type="com.ivansapplication.app.modules.frametwo.data.viewmodel.FrameTwoVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumngroundtwo"
        android:layout_height="match_parent"
        android:layout_width="match_parent" android:orientation="vertical">
        <FrameLayout android:gravity="start" android:id="@+id/frameHome"
            android:layout_height="match_parent"
            android:layout_width="match_parent" style="@style/groupStylewhite_A700">
            <FrameLayout android:id="@+id/frameContent"
                android:layout_gravity="bottom|start"
                android:layout_height="@dimen/_423pxv"
                android:layout_marginTop="@dimen/_10pxv" android:layout_width="match_parent">
                <ImageView android:id="@+id/imageGroundTwo"
                    android:layout_gravity="bottom|start"
                    android:layout_height="@dimen/_295pxv"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_ground2}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_ground2"/>
                <FrameLayout android:id="@+id/frameStackgroundone"
                    android:layout_gravity="bottom|start"
                    android:layout_height="@dimen/_238pxv"
                    android:layout_marginTop="@dimen/_10pxv" android:layout_width="match_parent">
                    <ImageView android:id="@+id/imageGroundOne"
                        android:layout_gravity="top|start"
                        android:layout_height="@dimen/_194pxv"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:scaleType="fitXY"
                        imageRes="@{@drawable/img_ground1}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_ground1"/>
                    <FrameLayout android:id="@+id/frameLowBarHome"
                        android:layout_gravity="bottom|start"
                        android:layout_height="@dimen/_143pxv"
                        android:layout_marginBottom="@dimen/_20pxv"
                        android:layout_marginTop="@dimen/_20pxv" android:layout_width="match_parent">
                        <ImageView android:id="@+id/imageRoundedrectang"
                            android:layout_gravity="bottom|start"
                            android:layout_height="@dimen/_105pxv"
                            android:layout_marginTop="@dimen/_10pxv"
                            android:layout_width="match_parent"
                            android:scaleType="fitXY"
                            cornerRadius="@{@dimen/_15pxh}"
                            imageRes="@{@drawable/img_roundedrectang_1}"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_roundedrectang_1"/>
                        <ImageView android:id="@+id/imageOnActiveeleme"
                            android:layout_gravity="top|start"
                            android:layout_height="@dimen/_75pxh"
                            android:layout_marginBottom="@dimen/_10pxv"
                            android:layout_marginEnd="@dimen/_37pxh"
                            android:layout_marginStart="@dimen/_37pxh"
                            android:layout_width="@dimen/_104pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_onactiveeleme"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_onactiveeleme"/>
                        <View
                            android:background="@drawable/rectangle_bg_bluegray_900_radius_20"
                            android:id="@+id/viewOnActiveelemeOne"
                            android:layout_gravity="top|start"
                            android:layout_height="@dimen/_40pxh"
                            android:layout_marginBottom="@dimen/_25pxv"
                            android:layout_marginEnd="@dimen/_69pxh"
                            android:layout_marginStart="@dimen/_69pxh"
                            android:layout_marginTop="@dimen/_25pxv" android:layout_width="@dimen/_40pxh"/>
                        <ImageView android:id="@+id/imageIconGroup"
                            android:layout_gravity="top|center"
                            android:layout_height="@dimen/_40pxh"
                            android:layout_marginBottom="@dimen/_32pxv"
                            android:layout_marginEnd="@dimen/_76pxh"
                            android:layout_marginStart="@dimen/_76pxh"
                            android:layout_marginTop="@dimen/_32pxv"
                            android:layout_width="@dimen/_233pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_icongroup_40x233"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_icongroup_40x233"/>
                    </FrameLayout>
                    <LinearLayout android:id="@+id/linearRowmain"
                        android:layout_gravity="bottom|center"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_76pxv"
                        android:layout_marginEnd="@dimen/_38pxh"
                        android:layout_marginStart="@dimen/_38pxh"
                        android:layout_marginTop="@dimen/_76pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtMain"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_1pxv"
                            android:layout_weight="0.25"
                            android:layout_width="0dp"
                            android:lineSpacingExtra="@dimen/_4pxh"
                            android:singleLine="true"
                            android:text="@{frameTwoVM.frameTwoModel.txtMain}"
                            style="@style/txtKyivTypeSerifkyivtypeserifregular16" tools:text="@string/lbl"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtLight"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_1pxv"
                            android:layout_marginStart="@dimen/_24pxh"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_weight="0.35"
                            android:layout_width="0dp"
                            android:lineSpacingExtra="@dimen/_4pxh"
                            android:singleLine="true"
                            android:text="@{frameTwoVM.frameTwoModel.txtLight}"
                            style="@style/txtKyivTypeSerifkyivtypeserifregular16" tools:text="@string/lbl2"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtConnect"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12pxh"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_weight="0.4"
                            android:layout_width="0dp"
                            android:lineSpacingExtra="@dimen/_4pxh"
                            android:singleLine="true"
                            android:text="@{frameTwoVM.frameTwoModel.txtConnect}"
                            style="@style/txtKyivTypeSerifkyivtypeserifregular16" tools:text="@string/lbl3"/>
                    </LinearLayout>
                </FrameLayout>
                <FrameLayout android:id="@+id/frameStackgroundthree"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_193pxv"
                    android:layout_marginBottom="@dimen/_10pxv" android:layout_width="match_parent">
                    <ImageView android:id="@+id/imageGroundThree"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_193pxh"
                        android:layout_width="match_parent"
                        android:scaleType="fitXY"
                        imageRes="@{@drawable/img_ground2}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_ground2"/>
                    <ImageView android:id="@+id/imageGroundFour"
                        android:layout_gravity="top|end"
                        android:layout_height="@dimen/_138pxh"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_8pxv"
                        android:layout_width="@dimen/_369pxh"
                        android:scaleType="fitXY"
                        imageRes="@{@drawable/img_ground4}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_ground4"/>
                </FrameLayout>
            </FrameLayout>
            <FrameLayout android:id="@+id/frameOnOffMain"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_522pxv"
                android:layout_marginBottom="@dimen/_10pxv" android:layout_width="match_parent">
                <ImageView android:id="@+id/imageFone"
                    android:layout_gravity="start"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_fone}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_fone"/>
                <LinearLayout android:id="@+id/linearColumncloudtwo"
                    android:layout_gravity="bottom|end"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_24pxv"
                    android:layout_marginEnd="@dimen/_5pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="wrap_content" android:orientation="vertical">
                    <FrameLayout android:id="@+id/frameStackcloudtwo"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_190pxv" android:layout_width="@dimen/_332pxh">
                        <ImageView android:id="@+id/imageCloudTwo"
                            android:layout_gravity="top|start"
                            android:layout_height="@dimen/_138pxh"
                            android:layout_marginBottom="@dimen/_10pxv"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_width="@dimen/_203pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_cloud2"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_cloud2"/>
                        <ImageView android:id="@+id/imageCloudOne"
                            android:layout_gravity="bottom|end"
                            android:layout_height="@dimen/_144pxh"
                            android:layout_marginStart="@dimen/_10pxh"
                            android:layout_marginTop="@dimen/_10pxv"
                            android:layout_width="@dimen/_211pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_cloud1"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_cloud1"/>
                    </FrameLayout>
                    <LinearLayout android:gravity="center_horizontal"
                        android:id="@+id/linearColumnturnontext"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_25pxh"
                        android:layout_marginStart="@dimen/_25pxh"
                        android:layout_marginTop="@dimen/_38pxv"
                        android:layout_width="wrap_content"
                        android:orientation="vertical" style="@style/groupStylebluegray_1">
                        <TextView android:ellipsize="end"
                            android:gravity="end"
                            android:id="@+id/txtTurnOnText"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="@dimen/_81pxv"
                            android:layout_marginEnd="@dimen/_21pxh"
                            android:layout_marginStart="@dimen/_21pxh"
                            android:layout_marginTop="@dimen/_78pxv"
                            android:layout_width="match_parent"
                            android:letterSpacing="0.15"
                            android:lineSpacingExtra="@dimen/_8pxh"
                            android:singleLine="true"
                            android:text="@{frameTwoVM.frameTwoModel.txtTurnOnText}"
                            style="@style/txtCrimsonTextregular24" tools:text="@string/lbl10"/>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
